# uhppoted-python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yml
examples/cli/: commands.py  main.py  requirements.txt
examples/event-listener/: __init__.py  main.py
integration-tests/: __init__.py
integration-tests/uhppoted/: expected.py  stub.py  tcp.py  tcp_timeout.py  udp_default.py  udp_dest_addr.py  udp_timeout.py  uhppote.py
src/uhppoted/: __init__.py  commands.py  decode.py  encode.py  net.py  structs.py  tcp.py  udp.py  uhppote.py
src/uhppoted.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/uhppoted/: test_decode.py  test_encode.py  test_net.py  test_udp.py
